--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_dark">#45484D</color>
+    <color name="purple">#6C3177</color>
+    <color name="dark_blue">#FF081A4A</color>
+    <color name="background_app">#0E0B20</color>
+    <color name="pink">#E91E63</color>
 </resources>
