--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             style="@style/MarqueeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/App_name"
+            android:text="HOME PANEL"
             android:textColor="@color/white"
             android:textSize="35sp"
             android:textStyle="bold" />
@@ -35,11 +35,13 @@
             android:src="@drawable/ic_settings"
             app:shapeAppearanceOverlay="@style/curved" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,6 +49,7 @@
             android:textSize="24sp" />
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/buttons_list_wrapper"
         android:layout_width="wrap_content"
@@ -59,12 +62,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            app:maxImageSize="30dp"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_playlist"
             android:tint="@color/black"
             app:backgroundTint="@color/white"
+            app:maxImageSize="30dp"
             app:shapeAppearanceOverlay="@style/curved" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -72,19 +75,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            app:maxImageSize="30dp"
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_shuffle"
             android:tint="@color/black"
             app:backgroundTint="@color/white"
+            app:maxImageSize="30dp"
             app:shapeAppearanceOverlay="@style/curved" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/song_container"
         android:layout_width="match_parent"
-        android:paddingTop="20dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:paddingTop="20dp" />
 </LinearLayout>
