--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -28,10 +28,10 @@
             android:id="@+id/fab_settings"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:clickable="true"
-            android:focusable="true"
             android:layout_gravity="center"
             android:layout_marginStart="50dp"
+            android:clickable="true"
+            android:focusable="true"
             android:src="@drawable/ic_settings"
             app:shapeAppearanceOverlay="@style/curved" />
 
@@ -64,12 +64,12 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/songname"
+        android:id="@+id/songName"
         style="@style/MarqueeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/songs"
+        android:text="song"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -97,19 +97,6 @@
             android:contentDescription="Play"
             android:focusable="true"
             android:src="@drawable/ic_pause_circle"
-            android:tint="@color/black"
-            app:backgroundTint="@color/white"
-            app:shapeAppearanceOverlay="@style/curved" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:clickable="true"
-            android:contentDescription="Stop"
-            android:focusable="true"
-            android:src="@drawable/ic_stop_circle"
             android:tint="@color/black"
             app:backgroundTint="@color/white"
             app:shapeAppearanceOverlay="@style/curved" />
