--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,7 +18,7 @@
             style="@style/MarqueeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/App_name"
+            android:text="SETTINGS:"
             android:textColor="@color/white"
             android:textSize="35sp"
             android:textStyle="bold" />
@@ -75,7 +75,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/song_container"
         android:layout_width="match_parent"
-        android:paddingTop="20dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:paddingTop="20dp" />
 </LinearLayout>
