--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,7 +12,12 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_playFragment"
-            app:destination="@id/playFragment" />
+            app:destination="@id/playFragment">
+            <argument
+                android:name="songname"
+                app:argType="string"
+                android:defaultValue="null" />
+        </action>
         <action
             android:id="@+id/action_homeFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
@@ -25,6 +30,10 @@
         <action
             android:id="@+id/action_playFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <argument
+            android:name="songname"
+            app:argType="string"
+            android:defaultValue="null" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
