--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             style="@style/MarqueeText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HOME PANEL"
+            android:text="HOME PANEL:"
             android:textColor="@color/white"
             android:textSize="35sp"
             android:textStyle="bold" />
@@ -29,9 +29,10 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="135dp"
             android:clickable="true"
             android:focusable="true"
+            app:tint="@color/white"
             android:src="@drawable/ic_settings"
             app:shapeAppearanceOverlay="@style/curved" />
     </LinearLayout>
