--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="dark_blue">#FF081A4A</color>
     <color name="background_app">#0E0B20</color>
     <color name="pink">#E91E63</color>
+    <color name="green">#78F609</color>
 </resources>
